@@ -47,6 +47,17 @@ websocket '/json' => sub {
   );
 };
 
+websocket '/timeout' => sub {
+  my $c = shift;
+  $c->on(
+    message => sub {
+      my ($c, $msg) = @_;
+      $c->inactivity_timeout($msg) unless $msg eq 'timeout';
+      $c->send("$msg: " . Mojo::IOLoop->stream($c->tx->connection)->timeout);
+    }
+  );
+};
+
 get '/plain' => {text => 'Nothing to see here!'};
 
 websocket '/push' => sub {
@@ -201,6 +212,11 @@ $t->tx->once(
 $t->message_ok->message_is({binary => 'a' x 10000});
 ok length $payload < 10000, 'message has been compressed';
 $t->finish_ok->finished_ok(1005);
+
+# Timeout
+$t->websocket_ok('/timeout')->send_ok('timeout')
+  ->message_ok->message_is('timeout: 30')->send_ok('120')
+  ->message_ok->message_is('120: 120')->finish_ok;
 
 # Compressed message exceeding the limit when decompressed
 $t->websocket_ok(
